0.8.0/_sources/api/skimage.morphology.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`morphology`
=========================
.. automodule:: skimage.morphology

.. currentmodule:: skimage.morphology
.. autosummary::

   skimage.morphology.binary_closing
   skimage.morphology.binary_dilation
   skimage.morphology.binary_erosion
   skimage.morphology.binary_opening
   skimage.morphology.black_tophat
   skimage.morphology.closing
   skimage.morphology.convex_hull_image
   skimage.morphology.diamond
   skimage.morphology.dilation
   skimage.morphology.disk
   skimage.morphology.erosion
   skimage.morphology.greyscale_black_top_hat
   skimage.morphology.greyscale_close
   skimage.morphology.greyscale_dilate
   skimage.morphology.greyscale_erode
   skimage.morphology.greyscale_open
   skimage.morphology.greyscale_white_top_hat
   skimage.morphology.is_local_maximum
   skimage.morphology.label
   skimage.morphology.medial_axis
   skimage.morphology.opening
   skimage.morphology.reconstruction
   skimage.morphology.rectangle
   skimage.morphology.remove_small_objects
   skimage.morphology.skeletonize
   skimage.morphology.square
   skimage.morphology.watershed
   skimage.morphology.white_tophat

binary_closing
--------------

.. autofunction:: skimage.morphology.binary_closing

binary_dilation
---------------

.. autofunction:: skimage.morphology.binary_dilation

binary_erosion
--------------

.. autofunction:: skimage.morphology.binary_erosion

binary_opening
--------------

.. autofunction:: skimage.morphology.binary_opening

black_tophat
------------

.. autofunction:: skimage.morphology.black_tophat

closing
-------

.. autofunction:: skimage.morphology.closing

convex_hull_image
-----------------

.. autofunction:: skimage.morphology.convex_hull_image

diamond
-------

.. autofunction:: skimage.morphology.diamond

dilation
--------

.. autofunction:: skimage.morphology.dilation

disk
----

.. autofunction:: skimage.morphology.disk

erosion
-------

.. autofunction:: skimage.morphology.erosion

greyscale_black_top_hat
-----------------------

.. autofunction:: skimage.morphology.greyscale_black_top_hat

greyscale_close
---------------

.. autofunction:: skimage.morphology.greyscale_close

greyscale_dilate
----------------

.. autofunction:: skimage.morphology.greyscale_dilate

greyscale_erode
---------------

.. autofunction:: skimage.morphology.greyscale_erode

greyscale_open
--------------

.. autofunction:: skimage.morphology.greyscale_open

greyscale_white_top_hat
-----------------------

.. autofunction:: skimage.morphology.greyscale_white_top_hat

is_local_maximum
----------------

.. autofunction:: skimage.morphology.is_local_maximum

label
-----

.. autofunction:: skimage.morphology.label

medial_axis
-----------

.. autofunction:: skimage.morphology.medial_axis

opening
-------

.. autofunction:: skimage.morphology.opening

reconstruction
--------------

.. autofunction:: skimage.morphology.reconstruction

rectangle
---------

.. autofunction:: skimage.morphology.rectangle

remove_small_objects
--------------------

.. autofunction:: skimage.morphology.remove_small_objects

skeletonize
-----------

.. autofunction:: skimage.morphology.skeletonize

square
------

.. autofunction:: skimage.morphology.square

watershed
---------

.. autofunction:: skimage.morphology.watershed

white_tophat
------------

.. autofunction:: skimage.morphology.white_tophat

